# laundry-bot

./: Cargo.toml  Dockerfile  README.md
.deploy/: laundry-bot.yaml
.deploy/laundry-bot/: deployment.yaml  secrets.yaml
src/: main.rs
