[package]
name = "laundry-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
rumqttc = "0.21"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
serenity = { version = "0.12", default-features = false, features = [
  "client",
  "http",
  "gateway",
  "rustls_backend",
  "builder",
] }
metrics = "0.23"
metrics-exporter-prometheus = "0.13"
metrics-util = "0.16"
log = "0.4"
env_logger = "0.11"
